src/objects/RM_Regulatory_Certification__c.object
<CustomObject>
    <fields>
        <fullName>Certified__c</fullName>
        <label>Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chem_Regulation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chem Regulation</label>
        <referenceTo>Chem_Regulation__c</referenceTo>
        <relationshipLabel>RM Regulatory Certification</relationshipLabel>
        <relationshipName>RM_Regulatory_Certification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Raw_Material__c</fullName>
        <label>Raw Material</label>
        <referenceTo>RawMaterial__c</referenceTo>
        <relationshipLabel>RM Regulatory Certification</relationshipLabel>
        <relationshipName>RM_Regulatory_Certification</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RM Regulatory Certification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RMRC-{0000000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RM Regulatory Certification</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>